--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,29 @@
-# OpenAI API Key
+# OpenAI API Key (Required)
+# This is used for both the LLM and embeddings in the RAG chatbot
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Optional: Specify a different model
-# MODEL_NAME=gpt-4-turbo
+# LLM Model Configuration
+# Options: gpt-4o-mini, gpt-4o
+LLM_MODEL=gpt-4o-mini
+# Range: 0.0 to 1.0
+LLM_TEMPERATURE=0.2
 
 # Logging Configuration
-# Available levels: DEBUG, INFO, WARNING, ERROR, CRITICAL
-# Default: INFO
-LOG_LEVEL=INFO 
+# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Cache Configuration
+TRANSCRIPT_CACHE_DIR=~/.youtube_analysis/cache
+CACHE_EXPIRATION_HOURS=24
+
+# Output Configuration
+# Options: markdown, json, text
+OUTPUT_DIR=./output
+OUTPUT_FORMAT=markdown
+
+# YouTube API Key (Optional)
+# Used as a fallback to get video information if pytube is not available
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Optional: Specify a different model
+# MODEL_NAME=gpt-4-turbo 
