--- a/src/youtube_analysis/config/tasks.yaml
+++ b/src/youtube_analysis/config/tasks.yaml
@@ -25,79 +25,55 @@ classify_video:
 
 summarize_content:
   description: >
-    Your task is to create a comprehensive summary of the YouTube video based on its transcription.
-    
-    You will receive the transcription of the YouTube video as input.
-    Here is the transcription:
+    Here is the YouTube video transcription:
     {transcript}
-    
-    Please create a well-structured summary with the following sections:
-    1. Overall TL;DR (2-3 paragraphs)
-    2. Key points and main ideas
-    3. Important details and examples mentioned
-    
-    Your summary should be clear, concise, and capture all the essential information from the video.
-    Focus on maintaining the core message while eliminating redundancy and less important details.
+
+    Create a concise executive summary of the YouTube video transcript, including:
+
+    - TL;DR: Briefly summarize the video's core message in 3-4 clear sentences.
+    - Key Points: Provide a bullet-point list (max 5 points) of the most critical takeaways.
 
   expected_output: >
-    A comprehensive, well-structured summary of the YouTube video with the requested sections.
-    The summary should be clear, concise, and capture all the essential information.
+    Concise, structured executive summary featuring a succinct TL;DR and essential key points.
 
 analyze_content:
   description: >
-    Your task is to analyze the YouTube video content based on its transcription and summary.
-    
-    You will receive the transcription of the YouTube video as input.
-    Here is the transcription:
+    Here is the YouTube video transcription:
     {transcript}
 
-    Use the summary from the Summarize Content task.
-    
-    Please analyze this content focusing on:
-    1. The main product, service, or concept being discussed
-    2. The target audience and their needs
-    3. The unique value propositions presented
-    4. Any technical details or specifications mentioned
-    5. Potential applications or use cases
-    
-    Your analysis should be detailed and provide valuable insights for someone interested in this topic.
-    Support your analysis with specific examples and quotes from the transcription.
+    Provide concise, efficient notes analyzing critical insights from the video content, including:
+
+    - Main concept, product, or service discussed
+    - Intended audience and relevance
+    - Unique points or value propositions
+    - Significant technical or practical details
+
+    Include brief, relevant quotes or examples for clarity.
 
   expected_output: >
-    A detailed analysis of the YouTube video content focusing on the requested aspects.
-    The analysis should include specific examples and quotes from the transcription to support your insights.
+    Clear, broadly applicable notes suitable for efficient study and quick comprehension.
 
 create_action_plan:
   description: >
-    Your task is to create an actionable plan based on the YouTube video content.
-
-    Use the transcript provided by the user for a better understanding of the video content.
-    Here is the transcript:
+    Based on the provided YouTube video transcription, you are tasked with creating a strategic action plan.
+    Here is the YouTube video transcription:
     {transcript}
 
-    Use the summary from the Summarize Content task.
-    Use the analysis from the Analyze Content task.
-    
-    Based on this information, create a practical action plan with:
-    1. 3-5 specific steps the user can take to apply the knowledge from the video
-    2. Resources they might need to implement each step
-    3. Expected outcomes from following this plan
-    4. Potential challenges they might face and how to overcome them
-    
-    Your plan should be practical, specific, and immediately actionable.
-    Make sure each step is clear and provides concrete guidance.
+    Generate concise and actionable advisor notes outlining:
+
+    - 3-5 straightforward recommendations
+    - Key resources needed (briefly stated)
+    - Clearly defined anticipated outcomes
+    - Potential challenges accompanied by simple solutions
+
+    Each recommendation should be direct, practical, and easy to implement immediately.
 
   expected_output: >
-    A practical action plan with specific steps, resources, expected outcomes, and potential challenges.
-    The plan should be immediately actionable and provide clear guidance for implementing the knowledge
-    from the video. 
+    Direct, actionable advisor notes clearly outlining recommendations, resources, outcomes, and succinct solutions to potential challenges.
 
 write_report:
   description: >
-    Your task is to write a report based on the YouTube video content in Markdown format.
-    
-    Use the transcript provided by the user for a better understanding of the video content.
-    Here is the transcript:
+    Here is the YouTube video transcription:
     {transcript}
 
     Use the classification from the Classify Video task.
@@ -105,20 +81,16 @@ write_report:
     Use the analysis from the Analyze Content task.
     Use the action plan from the Create Action Plan task.
     
-    Please write a report with the following sections:
-    1. Video Classification
-    2. TL;DR of the video content
-    3. Key points and main ideas
-    4. Important details and examples mentioned
-    5. Analysis of the video content
-    6. Action plan based on the video content
-    7. Potential challenges they might face and how to overcome them
-    
-    Your report should be clear, concise, and capture all the essential information from the video.
-    Focus on maintaining the core message while eliminating redundancy and less important details.
-    Format the report in Markdown for better readability.
-    
+    Prepare a succinct, high-quality Markdown report (maximum 750 words) clearly summarizing:
+
+    - Classification
+    - Crisp TL;DR
+    - Key Points
+    - Concise Analysis Notes
+    - Direct Advisor Recommendations and Action Plan
+    - Potential Challenges and Simple Solutions
+
+    Prioritize clarity, readability, and brevity, eliminating redundancy to create superior quality, highly effective notes.
+
   expected_output: >
-    A comprehensive, well-structured Markdown report of the YouTube video with the requested sections.
-    The report should be clear, concise, and capture all the essential information.
-    
+    A structured Markdown report crafted as concise, top-tier notes optimized for immediate understanding and practical application.
