--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,9 @@ chromadb>=0.4.18
 tiktoken>=0.5.1
 pytube>=15.0.0
 requests>=2.31.0
-supabase>=2.3.0 
+supabase>=2.3.0
+reportlab>=4.0.0
+markdown>=3.4.0
+langchain-anthropic>=0.3.10
+langchain-google-genai
+langchain-tavily
