--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ python-dotenv>=1.0.0
 chromadb>=0.4.18
 tiktoken>=0.5.1
 pytube>=15.0.0
+moviepy==1.0.3
+yt-dlp>=2023.7.6
 requests>=2.31.0
 supabase>=2.3.0
 reportlab>=4.0.0
@@ -24,3 +26,5 @@ markdown>=3.4.0
 langchain-anthropic>=0.3.10
 langchain-google-genai
 langchain-tavily
+langgraph==0.3.11
+faiss-cpu
